#5: Downgrade to latest Jenkins LTS and Java 8